src/test/test-models/bad/err-if-else-double-else.stan
transformed data {
  real y;
  y <- 3;
  else y <- 3;
  else y <- 4;
}
model {
}
